feat(backend): sort by role order and then by task order inside obstacles